Added delete method

--- a/src/app/components/movies/update-movies/update-movies.component.html
+++ b/src/app/components/movies/update-movies/update-movies.component.html
@@ -44,6 +44,7 @@
     </div>
     <div class="row margin">
       <button type="submit" class="offset-4 col-4 btn btn-dark">Submit</button>
+      <button type="button" (click)="deleteMovie()" class="offset-4 col-4 btn btn-danger margin">Delete</button>
     </div>
     
   </form>
